--- a/entorndetreball/index.html
+++ b/entorndetreball/index.html
@@ -493,11 +493,11 @@ git config --global user.email <replace>johndoe@example.com</replace>
     <work>
         <p>Edita l'arxiu <file>index.html</file> i escriu el següent codi HTML:</p>
 
-        <code html>
+        <sc html>
 &lt;!DOCTYPE html&gt;
 &lt;title&gt;My Github Page&lt;/title&gt;
 &lt;h1&gt;Welcome to my Github Page&lt;/h1&gt;            
-        </code>
+        </sc>
 
         <img src="img/image18.png">
 
@@ -528,12 +528,12 @@ git config --global user.email <replace>johndoe@example.com</replace>
     <work>
         <p>Afegeix el següent codi al fitxer <file>index.html</file> 
             (substitueix el teu nom d'usuari):</p>
-        <code xml>
+        <sc xml>
 &lt;!DOCTYPE html&gt;
 &lt;title>My Github Page&lt;/title&gt;
 &lt;h1>Welcome to my Github Page&lt;/h1&gt;
 &lt;a href="https://github.com/<replace>gerardfp</replace>"&gt;View my Github Profile&lt;/a&gt;
-        </code>
+        </sc>
 
         <p>Per a pujar els canvis a GitHub fes clic 
             sobre <img src="img/image5.png">, introdueix 
