--- a/inicihtml/index.html
+++ b/inicihtml/index.html
@@ -70,8 +70,8 @@
             </ul>
             <p>El contingut dels arxius ha de ser aquest:</p>
 
-            <codefile>style.css</codefile>
-            <code css>
+            <scfile>style.css</scfile>
+            <sc css>
 html {
     width: 60em;
     margin: 0 auto;
@@ -141,10 +141,10 @@ li {
 li:hover {
     transform: scale(1.01);
 }                
-            </code>
+            </sc>
 
-            <codefile>script.js</codefile>
-            <code javascript>
+            <scfile>script.js</scfile>
+            <sc javascript>
 const list = document.createElement('ul');
 const info = document.createElement('p');
     
@@ -162,7 +162,7 @@ info.onclick = () => {
         item.textContent = prompt('Introdueix el nou contingut de l\'item');
     }
 }     
-            </code>
+            </sc>
         </li>
     </ul>
 
