--- a/intellij/index.html
+++ b/intellij/index.html
@@ -93,32 +93,32 @@
 </td><td colspan="1" rowspan="1"><p><strong>Shortcut</strong></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Moure una línia de codi, o vàries línies seleccionades</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Shift+Up</code></p>
-<p><code>Ctrl+Shift+Down</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Shift+Up</sc></p>
+<p><sc>Ctrl+Shift+Down</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Duplicar una línia de codi</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+D</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+D</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Eliminar una línia de codi</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Y</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Y</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Comentar o descomentar una línia de codi</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+/</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+/</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Coment un block de codi</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Shift+/</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Shift+/</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Find and replace in the current file</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+R</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+R</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Surround with</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Alt+T</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Alt+T</sc></p>
 </td></tr>
 </table>
 <h2 is-upgraded>Refactorització</h2>
 <p>En moltes ocasions ens trobem que hem de canviar el nom d&#39;una variable, o una classe, que hem utilitzat en molts llocs del programa. Canviar el nom a mà a cada lloc pot ser molt lent.</p>
 <p>Una forma eficient de fer-ho és amb la refactorització.</p>
-<p>Col·loca el cursor sobre la variable o classe a la que li vols canviar el nom i fes <code>Shift+F6</code></p>
+<p>Col·loca el cursor sobre la variable o classe a la que li vols canviar el nom i fes <sc>Shift+F6</sc></p>
 <p class="image-container"><img style="width: 340.00px" src="img/cd95220e4bc0707e.gif"></p>
 <aside class="special"><p>La refactorització és una de les eines més potents que ofereix un IDE:</p>
 <p><a href="https://www.jetbrains.com/help/idea/refactoring-source-code.html" target="_blank">https://www.jetbrains.com/help/idea/refactoring-source-code.html</a> </p>
@@ -131,13 +131,13 @@
 </td><td colspan="1" rowspan="1"><p><strong>Shortcut</strong></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Reformat del codi</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Alt+L</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Alt+L</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Línies de sagnat automàtic</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Alt+I</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Alt+I</sc></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p>Optimitzeu les importacions</p>
-</td><td colspan="1" rowspan="1"><p><code>Ctrl+Alt+O</code></p>
+</td><td colspan="1" rowspan="1"><p><sc>Ctrl+Alt+O</sc></p>
 </td></tr>
 </table>
 <p>Tingueu en compte que, per defecte, IntelliJ IDEA utilitza espais regulars per a sagnats en lloc de tabulacions. Si teniu fitxers amb molts sagnats, és possible que vulgueu optimitzar la seva mida si activeu l&#39; opció &#34;Utilitza el caràcter de tabulació&#34; a la <a href="https://www.jetbrains.com/help/idea/code-style-java.html" target="_blank">configuració d&#39;estil de codi Java</a> .</p>
@@ -159,39 +159,39 @@
       </google-codelab-step>
     
       <google-codelab-step label="Live templates" duration="0">
-        <p>Mitjançant la utilització de <em>live templates</em>, podem inserir construccions usades freqüentment al codi. Per exemple, bucles, condicions, diverses declaracions o declaracions d&#39;impressió. Per ampliar un fragment de codi, escriviu la <em>template abbreviation</em> corresponent i premeu <code>Tab</code>.</p>
+        <p>Mitjançant la utilització de <em>live templates</em>, podem inserir construccions usades freqüentment al codi. Per exemple, bucles, condicions, diverses declaracions o declaracions d&#39;impressió. Per ampliar un fragment de codi, escriviu la <em>template abbreviation</em> corresponent i premeu <sc>Tab</sc>.</p>
 <p>Live templates útils:</p>
 <table>
 <tr><td colspan="1" rowspan="1"><p><strong>Abbreviation</strong></p>
 </td><td colspan="1" rowspan="1"><p><strong>Expands to</strong></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>psvm</code></p>
-</td><td colspan="1" rowspan="1"><p><code>public static void main(String[] args){</code></p>
-<p><code>}</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>psvm</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>public static void main(String[] args){</sc></p>
+<p><sc>}</sc></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>sout</code></p>
-</td><td colspan="1" rowspan="1"><p><code>System.out.println();</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>sout</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>System.out.println();</sc></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>fori</code></p>
-</td><td colspan="1" rowspan="1"><p><code>for (int i = 0; i &lt; ; i++) {</code></p>
-<p><code>}</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>fori</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>for (int i = 0; i &lt; ; i++) {</sc></p>
+<p><sc>}</sc></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>ifn</code></p>
-</td><td colspan="1" rowspan="1"><p><code>if (var == null) {</code></p>
-<p><code>}</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>ifn</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>if (var == null) {</sc></p>
+<p><sc>}</sc></p>
 </td></tr>
 </table>
 <h2 is-upgraded>Afegir Live Templates</h2>
 <p>IntelliJ ens permet afegit els nous <em>Live Templates</em> per al codi que utilitzem més sovint.</p>
-<p>Ves a <code>File</code> &gt; <code>Settings</code> &gt; <code>Editor</code> &gt; <code>Live Templates</code></p>
+<p>Ves a <sc>File</sc> &gt; <sc>Settings</sc> &gt; <sc>Editor</sc> &gt; <sc>Live Templates</sc></p>
 <p class="image-container"><img style="width: 729.00px" src="img/8692bc920b1adb78.png"></p>
 <p>Fes click a la icona <img style="width: 19.00px" src="img/1e5f45696d328f2b.png"></p>
-<p>Abbreviation: <code>scn</code></p>
-<p>Template text: <code>Scanner scanner = new Scanner(System.in);</code></p>
+<p>Abbreviation: <sc>scn</sc></p>
+<p>Template text: <sc>Scanner scanner = new Scanner(System.in);</sc></p>
 <p class="image-container"><img style="width: 548.00px" src="img/87abb8f5030fb794.png"></p>
 <p>Defineix el context JAVA</p>
 <p class="image-container"><img style="width: 129.00px" src="img/dc879149897cf44e.png"></p>
-<p>Ja està, ara per a crear un <code>Scanner</code> només has de teclejar <code>scn</code> i polsar <code>Tab</code>.</p>
+<p>Ja està, ara per a crear un <sc>Scanner</sc> només has de teclejar <sc>scn</sc> i polsar <sc>Tab</sc>.</p>
 
 
       </google-codelab-step>
