--- a/javatutorial/quizz.html
+++ b/javatutorial/quizz.html
@@ -7,13 +7,13 @@
     <question text>
         <statement>
             <p>Donat el següent codi:</p>
-            <code java>
+            <sc java>
                 int a = 10;
                 int b = 12;
                 int c = b;
                 int d = a;
                 int e = c;
-            </code>    
+            </sc>    
             <p>Introdueix el valor de la variable <w>e</w>.</p>
         </statement>
 
@@ -35,13 +35,13 @@
     <question single>
         <statement>
             <p>Què imprimirà el següent codi?</p>
-            <code java>
+            <sc java>
                 System.out.print("1");
                 System.out.print("2");
                 System.out.println("3");
                 System.out.println();
                 System.out.println("4");
-            </code>
+            </sc>
         </statement>
         <o>
             <shell>1234</shell></o>
