--- a/input/index.html
+++ b/input/index.html
@@ -43,7 +43,7 @@
 <p class="image-container"><img style="width: 566.00px" src="img/7cd2d68e2e6a3381.png"></p>
 <p>Marca l&#39;opció &#34;Command Line App&#34;:</p>
 <p class="image-container"><img style="width: 566.00px" src="img/52d646601a8e62e6.png"></p>
-<p>Posa-li de nom <code>DadesEntrada</code></p>
+<p>Posa-li de nom <sc>DadesEntrada</sc></p>
 <p class="image-container"><img style="width: 566.00px" src="img/d0a3e2f954e1c17e.png"></p>
 
 
@@ -51,7 +51,7 @@
     
       <google-codelab-step label="Implementa l&#39;aplicació" duration="0">
         <p>Utilitzarem aquesta petita aplicació de gestió per a aprendre a tractar la validació de dades. Copia-la al teu projecte.</p>
-<pre><code>import java.util.Scanner;
+<pre><sc>import java.util.Scanner;
 
 class Alumne {
    String nom;
@@ -98,36 +98,36 @@ public class Main {
            }
        }
    }
-}</code></pre>
+}</sc></pre>
 <p>Prova l&#39;aplicació.</p>
 
 
       </google-codelab-step>
     
       <google-codelab-step label="Valida les dades d&#39;entrada" duration="0">
-        <p>Quan llegim dades de tipus <code>String</code> amb el mètode <code>nextLine()</code>, no hi ha cap restricció al tipus de dada que es pot llegir. </p>
-<p>Però què passa si quan tractem de llegir la nota amb <code>nextFloat()</code> l&#39;usuari s&#39;equivoca i introdueix una lletra, per exemple?</p>
+        <p>Quan llegim dades de tipus <sc>String</sc> amb el mètode <sc>nextLine()</sc>, no hi ha cap restricció al tipus de dada que es pot llegir. </p>
+<p>Però què passa si quan tractem de llegir la nota amb <sc>nextFloat()</sc> l&#39;usuari s&#39;equivoca i introdueix una lletra, per exemple?</p>
 <p class="image-container"><img style="width: 503.00px" src="img/7ca72557f97eed11.png"></p>
-<p>Ens trobem amb un desajust amb les dades d&#39;entrada (<code>InputMismatchException</code>).</p>
-<p>Una possible solució bastant comú és llegir les dades sempre amb <code>nextLine()</code> i tractar de convertir-les dintre del nostre programa. Hauríem de fer una cosa així:</p>
-<pre><code>nota = Float.parseFloat(scanner.nextLine());</code></pre>
+<p>Ens trobem amb un desajust amb les dades d&#39;entrada (<sc>InputMismatchException</sc>).</p>
+<p>Una possible solució bastant comú és llegir les dades sempre amb <sc>nextLine()</sc> i tractar de convertir-les dintre del nostre programa. Hauríem de fer una cosa així:</p>
+<pre><sc>nota = Float.parseFloat(scanner.nextLine());</sc></pre>
 <p>Ara bé, això no soluciona -de moment- el problema, ja que si l&#39;usuari introdueix un text, el programa no fallarà en la lectura de dades, però sí en la conversió:</p>
 <p class="image-container"><img style="width: 680.00px" src="img/f7df326c819fa906.png"></p>
-<p>Ara l&#39;error és en el format de número (<code>NumberFormatException</code>), ja que la cadena <code>&#34;abc&#34;</code> no es pot convertir a tipus <code>float</code>.</p>
+<p>Ara l&#39;error és en el format de número (<sc>NumberFormatException</sc>), ja que la cadena <sc>&#34;abc&#34;</sc> no es pot convertir a tipus <sc>float</sc>.</p>
 <h2 is-upgraded>try-catch</h2>
-<p>Per a corregir aquest nou error hem de fer una petita introducció a la sentència de control <code>try-catch</code>.</p>
-<p>La sentència <code>try-catch</code>, és bastant semblant a la sentència <code>if-else</code>.</p>
-<p>El bloc de la sentència <code>catch</code> només s&#39;executa si alguna instrucció del bloc <code>try</code> genera una exepció.</p>
-<p>En el nostre exemple, podem posar en el bloc <code>try</code> la sentència que converteix l&#39;<code>String</code> a <code>float</code>. Si aquesta sentència <em>falla</em>, s&#39;executarà la sentència del bloc <code>catch</code>.</p>
-<pre><code>try {
+<p>Per a corregir aquest nou error hem de fer una petita introducció a la sentència de control <sc>try-catch</sc>.</p>
+<p>La sentència <sc>try-catch</sc>, és bastant semblant a la sentència <sc>if-else</sc>.</p>
+<p>El bloc de la sentència <sc>catch</sc> només s&#39;executa si alguna instrucció del bloc <sc>try</sc> genera una exepció.</p>
+<p>En el nostre exemple, podem posar en el bloc <sc>try</sc> la sentència que converteix l&#39;<sc>String</sc> a <sc>float</sc>. Si aquesta sentència <em>falla</em>, s&#39;executarà la sentència del bloc <sc>catch</sc>.</p>
+<pre><sc>try {
    nota = Float.parseFloat(scanner.nextLine());
 } catch (Exception e){
    System.out.println(&#34;La nota introduïda no és valida&#34;);
-}</code></pre>
-<p>D&#39;aquesta manera el nostre programa no finalitzarà amb l&#39;exepció <code>NumberFormatException</code> sinò que mostrarà a l&#39;usuari un missatge indicant que la nota introduïda no és vàlida.</p>
-<p>Només queda una última consideració. El programa no fallarà però, amb quin valor quedarà la nota d&#39;aquell alumne? Efectivament, quedarà amb un <code>0.0</code>.</p>
-<p>Caldrà donar la opció a l&#39;usuari de tornar a introduir la nota fins que aquesta sigui vàlida. O dit en pensament computacional, caldrà tornar a demanar la nota a l&#39;usuari mentre (<code>while</code>) sigui invàlida.</p>
-<pre><code>do {
+}</sc></pre>
+<p>D&#39;aquesta manera el nostre programa no finalitzarà amb l&#39;exepció <sc>NumberFormatException</sc> sinò que mostrarà a l&#39;usuari un missatge indicant que la nota introduïda no és vàlida.</p>
+<p>Només queda una última consideració. El programa no fallarà però, amb quin valor quedarà la nota d&#39;aquell alumne? Efectivament, quedarà amb un <sc>0.0</sc>.</p>
+<p>Caldrà donar la opció a l&#39;usuari de tornar a introduir la nota fins que aquesta sigui vàlida. O dit en pensament computacional, caldrà tornar a demanar la nota a l&#39;usuari mentre (<sc>while</sc>) sigui invàlida.</p>
+<pre><sc>do {
    System.out.println(&#34;Nota: &#34;);
    try {
        alumnes[posicio].nota = Float.parseFloat(scanner.nextLine());
@@ -135,9 +135,9 @@ public class Main {
    } catch (Exception e) {
        System.out.println(&#34;La nota introduïda no és valida&#34;);
    }
-} while(true);</code></pre>
+} while(true);</sc></pre>
 <p>El programa complet queda finalment així:</p>
-<pre><code>import java.util.Scanner;
+<pre><sc>import java.util.Scanner;
 
 class Alumne {
    String nom;
@@ -191,7 +191,7 @@ public class Main {
            }
        }
    }
-}</code></pre>
+}</sc></pre>
 
 
       </google-codelab-step>
@@ -200,11 +200,11 @@ public class Main {
         <p>Cada cop que fas una modificació el codi, executes el programa i introdueixes les dades per veure com va funcionant el programa. </p>
 <p class="image-container"><img style="width: 433.00px" src="img/55b313f5b60b4a0f.png"></p>
 <p>Això significa una valuosa pèrdua de temps, que podem evitar posant les dades d&#39;entrada en un arxiu i llegint les dades directament de l&#39;arxiu.</p>
-<p>Crea un arxiu de text al directori arrel de projecte (<code>New</code> &gt; <code>File</code>) i escriu les dades d&#39;entrada en el fitxer:</p>
+<p>Crea un arxiu de text al directori arrel de projecte (<sc>New</sc> &gt; <sc>File</sc>) i escriu les dades d&#39;entrada en el fitxer:</p>
 <p class="image-container"><img style="width: 467.00px" src="img/e11ee22e95ace31.png"></p>
-<p>Modifica la construcció de l&#39;<code>Scanner</code> per a que en lloc de <code>System.in</code>, tingui com a origen el fitxer <code>dades</code>:</p>
-<pre><code>Scanner scanner = new Scanner(new File(&#34;dades&#34;));</code></pre>
-<p>Es mostrarà un error subratllat en vermell. Polsa <code>Alt+INTRO</code> i selecciona l&#39;opció &#34;Add exception to method signature&#34;:</p>
+<p>Modifica la construcció de l&#39;<sc>Scanner</sc> per a que en lloc de <sc>System.in</sc>, tingui com a origen el fitxer <sc>dades</sc>:</p>
+<pre><sc>Scanner scanner = new Scanner(new File(&#34;dades&#34;));</sc></pre>
+<p>Es mostrarà un error subratllat en vermell. Polsa <sc>Alt+INTRO</sc> i selecciona l&#39;opció &#34;Add exception to method signature&#34;:</p>
 <p class="image-container"><img style="width: 445.00px" src="img/843169bc7feb32d8.png"></p>
 <p>Ja està, això és tot el que has de fer, ara ja pots executar el teu programa i fer tantes proves com vulguis, sense haver d&#39;introduir cada cop les dades.</p>
 
