--- a/matrius/index.html
+++ b/matrius/index.html
@@ -41,7 +41,7 @@
 <p>Segueix les passes de l&#39;assistent d&#39;instalació i obre l&#39;aplicació.</p>
 <p>Crea un nou Scenario anomenat &#34;Minesweeper&#34;:</p>
 <p class="image-container"><img style="width: 452.00px" src="img/f1ae7b3e801f23db.png"></p>
-<p>Per al desenvolupament del joc necessitaràs aquestes imatges. Descarrega-les a la carpeta <code>images</code> del projecte i posa a cadascuna el nom que s&#39;indica:</p>
+<p>Per al desenvolupament del joc necessitaràs aquestes imatges. Descarrega-les a la carpeta <sc>images</sc> del projecte i posa a cadascuna el nom que s&#39;indica:</p>
 <table>
 <tr><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 16.00px" src="img/2a6ca1e38bfeb88c.png"></p>
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 16.00px" src="img/716a8378f54b6ec8.png"></p>
@@ -55,17 +55,17 @@
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 16.00px" src="img/491c250e10f05ddd.png"></p>
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 16.00px" src="img/46f3f17e5dd8217b.png"></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>0.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>1.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>2.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>3.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>4.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>5.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>6.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>7.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>8.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>hide.png</code></p>
-</td><td colspan="1" rowspan="1"><p><code>mine.png</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>0.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>1.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>2.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>3.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>4.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>5.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>6.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>7.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>8.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>hide.png</sc></p>
+</td><td colspan="1" rowspan="1"><p><sc>mine.png</sc></p>
 </td></tr>
 </table>
 
@@ -75,44 +75,44 @@
       <google-codelab-step label="Desenvolupament de la aplicació" duration="0">
         <p>Quan s&#39;obre el projecte es mostra aquesta finestra:</p>
 <p>A l&#39;esquerra trobem la finestra de previsualització del joc, a la dreta les classes dels objectes del joc.</p>
-<p>Les classes que deriven de <code>World</code> són les diferents pantalles del joc. En el nostre joc, la classe <code>MyWorld</code> representarà el tauler de mines.</p>
-<p>Les classes que deriven de <code>Actor</code> són els elements del joc. En el nostre joc, els elements són les caselles del tauler.</p>
-<p>Anem a crear, doncs, la classe <code>Casella</code>. Fes clic-dreta sobre la classe <code>Actor</code> i selecciona &#34;New subclass...&#34;</p>
+<p>Les classes que deriven de <sc>World</sc> són les diferents pantalles del joc. En el nostre joc, la classe <sc>MyWorld</sc> representarà el tauler de mines.</p>
+<p>Les classes que deriven de <sc>Actor</sc> són els elements del joc. En el nostre joc, els elements són les caselles del tauler.</p>
+<p>Anem a crear, doncs, la classe <sc>Casella</sc>. Fes clic-dreta sobre la classe <sc>Actor</sc> i selecciona &#34;New subclass...&#34;</p>
 <p class="image-container"><img style="width: 188.00px" src="img/2736f2a224e4cfa6.png"></p>
-<p>Posa-li <code>Casella</code> com a nom de la classe:</p>
+<p>Posa-li <sc>Casella</sc> com a nom de la classe:</p>
 <p class="image-container"><img style="width: 434.00px" src="img/28334931c714496e.png"></p>
-<p>Definirem els següents <strong>camps</strong> de la classe <code>Casella</code>:</p>
+<p>Definirem els següents <strong>camps</strong> de la classe <sc>Casella</sc>:</p>
 <table>
 <tr><td colspan="1" rowspan="1"><p><strong>Camp</strong></p>
 </td><td colspan="1" rowspan="1"><p><strong>Descripció</strong></p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>boolean hasMine = false;</code></p>
-</td><td colspan="1" rowspan="1"><p>Aquest camp determina si la casella té o no una mina. En principi el posem a <code>false</code>, però més endavant asignarem aleatòriament algunes caselles a <code>true</code>.</p>
+<tr><td colspan="1" rowspan="1"><p><sc>boolean hasMine = false;</sc></p>
+</td><td colspan="1" rowspan="1"><p>Aquest camp determina si la casella té o no una mina. En principi el posem a <sc>false</sc>, però més endavant asignarem aleatòriament algunes caselles a <sc>true</sc>.</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>int mineCount = 0;</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>int mineCount = 0;</sc></p>
 </td><td colspan="1" rowspan="1"><p>Aquest camp diu quantes caselles al voltant d&#39;aquesta tenen un mina.</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>String image = &#34;hide.png&#34;;</code></p>
+<tr><td colspan="1" rowspan="1"><p><sc>String image = &#34;hide.png&#34;;</sc></p>
 </td><td colspan="1" rowspan="1"><p>La imatge en que s&#39;ha de mostrar la casella. Inicialment totes estan amagadaes (<img style="width: 16.00px" src="img/491c250e10f05ddd.png">). Quan es faci clic sobre una casella revelarem el que hi ha a sota (<img style="width: 16.00px" src="img/2a6ca1e38bfeb88c.png"><img style="width: 16.00px" src="img/716a8378f54b6ec8.png"><img style="width: 16.00px" src="img/2734d3bb878084.png"><img style="width: 16.00px" src="img/312a5d7a5ce48c71.png"><img style="width: 16.00px" src="img/ffc9b1d1f3688480.png"><img style="width: 16.00px" src="img/fc6f8db09223a40a.png"><img style="width: 16.00px" src="img/48265fe0e63ca443.png"><img style="width: 16.00px" src="img/2979e3cb013ed79d.png"><img style="width: 16.00px" src="img/bce80f8505d87a18.png"><img style="width: 16.00px" src="img/46f3f17e5dd8217b.png">)</p>
 </td></tr>
 </table>
-<p>Fes doble-clic sobre la classe <code>Casella</code> i afegeix els camps:</p>
+<p>Fes doble-clic sobre la classe <sc>Casella</sc> i afegeix els camps:</p>
 <p class="image-container"><img style="width: 736.40px" src="img/de94b77209f8a16e.png"></p>
-<p>Ara programarem la classe <code>MyWorld</code>.</p>
-<p>Crearem una matriu d&#39;objectes de classe <code>Casella</code> que representarà les cel·les del camp de mines.</p>
-<p>Definirem tres camps: <code>rows</code> (nombre de files), <code>cols</code> (nombre de columnes) i <code>difficulty</code> (la quantitat de mines).</p>
+<p>Ara programarem la classe <sc>MyWorld</sc>.</p>
+<p>Crearem una matriu d&#39;objectes de classe <sc>Casella</sc> que representarà les cel·les del camp de mines.</p>
+<p>Definirem tres camps: <sc>rows</sc> (nombre de files), <sc>cols</sc> (nombre de columnes) i <sc>difficulty</sc> (la quantitat de mines).</p>
 <p>Farem dos recorreguts a la matriu.</p>
 <ul>
-<li>En el primer recorregut afegirem una nova casella a cadascuna de les posicions de la matriu i hi marcarem amb <code>hasMine</code> aleatòriament algunes d&#39;elles. Afegirem també cadascuna de les caselles al <code>World</code>.</li>
-<li>En el segon recorregut (un cop marcades les caselles amb mina) comptarem per a cada casella quantes al seu voltant tenen una mina (<code>mineCount</code>).</li>
+<li>En el primer recorregut afegirem una nova casella a cadascuna de les posicions de la matriu i hi marcarem amb <sc>hasMine</sc> aleatòriament algunes d&#39;elles. Afegirem també cadascuna de les caselles al <sc>World</sc>.</li>
+<li>En el segon recorregut (un cop marcades les caselles amb mina) comptarem per a cada casella quantes al seu voltant tenen una mina (<sc>mineCount</sc>).</li>
 </ul>
 <p class="image-container"><img style="width: 736.40px" src="img/6cb93b602e8b9ec.png"></p>
 <p>Si executes el joc veuràs el camp de mines:</p>
 <p class="image-container"><img style="width: 206.00px" src="img/6227e16f397390ed.png"></p>
 <p>Acabarem aquesta versió del joc fent que quan es faci clic en una casella, reveli el que hi ha a sota:</p>
-<p>Les accions que volem que faci un <code>Actor</code> les hem de posar al mètode <code>act()</code></p>
+<p>Les accions que volem que faci un <sc>Actor</sc> les hem de posar al mètode <sc>act()</sc></p>
 <p class="image-container"><img style="width: 736.40px" src="img/e97ce2e7275f98b4.png"></p>
-<p>Aquesta és l&#39;estructura de la matriu que representa el tauler. A partir de la classe <code>Casella</code> s&#39;han creat diversos objectes que s&#39;han assignat a cadascuna de les posicions del <code>tauler</code>.</p>
+<p>Aquesta és l&#39;estructura de la matriu que representa el tauler. A partir de la classe <sc>Casella</sc> s&#39;han creat diversos objectes que s&#39;han assignat a cadascuna de les posicions del <sc>tauler</sc>.</p>
 <p class="image-container"><img style="width: 633.00px" src="img/810665fe2de4b5c3.png"></p>
 <p>I aixi queda finalment el joc:</p>
 <p class="image-container"><img style="width: 206.00px" src="img/fa7c46b3e4a5b3f9.png"></p>
