--- a/refactoring/index.html
+++ b/refactoring/index.html
@@ -46,7 +46,7 @@
     
       <google-codelab-step label="Tipus de refactorització" duration="0">
         <p>IntelliJ ofereix una gran varitetat de formes de refactorització de codi.</p>
-<p>Per a veure les possibilitats que ens ofereix per a refactoritzar una part del codi en particular, cal posar el cursos a sobre o seleccionar la part que volem refactoritzar i polsar <code>Ctrl</code>+<code>Alt</code>+<code>Mayus</code>+<code>T</code></p>
+<p>Per a veure les possibilitats que ens ofereix per a refactoritzar una part del codi en particular, cal posar el cursos a sobre o seleccionar la part que volem refactoritzar i polsar <sc>Ctrl</sc>+<sc>Alt</sc>+<sc>Mayus</sc>+<sc>T</sc></p>
 <p class="image-container"><img style="width: 258.00px" src="img/4b3cf7cdca8ae19d.png"></p>
 <aside class="special"><p><strong>+Info:</strong> Pots veure totes les refactoritzacions que pot fer IntelliJ a</p>
 <p><a href="https://www.jetbrains.com/help/idea/refactoring-source-code.html" target="_blank">https://www.jetbrains.com/help/idea/refactoring-source-code.html</a></p>
@@ -73,7 +73,7 @@
       <google-codelab-step label="Canviar la signatura" duration="0">
         <h2 is-upgraded>Afegir paràmetres</h2>
 <p>Imagina que tenim un codi semblant a aquest:</p>
-<pre><code>public class Main {
+<pre><sc>public class Main {
    public static void main(String[] args) {
        Scanner scanner = new Scanner(System.in);
 
@@ -88,10 +88,10 @@
    private static void mostrar(int a) {
        System.out.println(&#34;La variable a és &#34; +  a);
    }
-}</code></pre>
+}</sc></pre>
 <p>És a dir, un codi on tenim un mètode que cridem molts cops al nostre codi.</p>
 <p>Ara imagina que volem llegir una altra variable i passar-la al mètode per a que també la mostri. Ens hauria de quedar un codi així:</p>
-<pre><code>public class Main {
+<pre><sc>public class Main {
    public static void main(String[] args) {
        Scanner scanner = new Scanner(System.in);
 
@@ -109,7 +109,7 @@
        System.out.println(&#34;La variable b és &#34; +  b);
    }
 }
-</code></pre>
+</sc></pre>
 <p>Fer un simple canvi com aquest seria bastant pesat de fer a mà, ja que hi ha que canviar moltes línies de codi. Usant la refactorització farem el canvi de forma automàtica.</p>
 <p class="image-container"><img style="width: 654.00px" src="img/bc4da156861d27fd.gif"></p>
 
@@ -118,7 +118,7 @@
     
       <google-codelab-step label="Extraure mètodes" duration="0">
         <p>Imagina que tenim el següent codi d&#39;exemple, que determina si un nombre és primer o no.</p>
-<pre><code>public class Main {
+<pre><sc>public class Main {
    public static void main(String[] args) {
        Scanner scanner = new Scanner(System.in);
 
@@ -139,8 +139,8 @@
 
        System.out.println(isPrime);
    }
-}</code></pre>
-<p>Podem extraure automàticament el codi en un mètode: seleccionem el codi que volem extraure i polsem <code>Ctrl</code>+<code>Alt</code>+<code>M</code></p>
+}</sc></pre>
+<p>Podem extraure automàticament el codi en un mètode: seleccionem el codi que volem extraure i polsem <sc>Ctrl</sc>+<sc>Alt</sc>+<sc>M</sc></p>
 <p class="image-container"><img style="width: 559.00px" src="img/85b4cba245404fb4.gif"></p>
 
 
@@ -157,7 +157,7 @@
       <google-codelab-step label="Extraure Variables" duration="0">
         <p>Quan utilitzem una expressió vàries vegades, és més convinent emmagatzemar el resultat i reutilitzar-lo, que re-calcular l&#39;expressió cada cop.</p>
 <p>Imagina aquest exemple:</p>
-<pre><code>public class Main {
+<pre><sc>public class Main {
    public static void main(String[] args) {
        float valor1 = 10;
        float valor2 = 5;
@@ -165,8 +165,8 @@
        System.out.println(&#34;SUMA:&#34; + (valor1+valor2));
        System.out.println(&#34;MITJA:&#34; + (valor1+valor2)/2);
    }
-}</code></pre>
-<p>Estem calculant la suma dels valors dues vegades. Podem emmagatzemar el resultat en una variable i reutilitzar-lo. Només cal seleccionar l&#39;expressió i polsar <code>Ctrl</code>+<code>Alt</code>+<code>V</code></p>
+}</sc></pre>
+<p>Estem calculant la suma dels valors dues vegades. Podem emmagatzemar el resultat en una variable i reutilitzar-lo. Només cal seleccionar l&#39;expressió i polsar <sc>Ctrl</sc>+<sc>Alt</sc>+<sc>V</sc></p>
 <p class="image-container"><img style="width: 517.00px" src="img/d75aa9dfe05947cf.gif"></p>
 
 
